<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorPrimaryDark"
android:weightSum="1">

<!-- Logo -->
<ImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:id="@+id/imageView"
    android:layout_gravity="center_horizontal"
    android:src="@mipmap/ic_launcher"
    android:layout_marginTop="40dp"
    android:layout_weight="0.14" />

<!-- Email Label -->
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/change_password"
    android:id="@+id/date_variable"
    android:textColor="@color/textColorLogin"
    android:textStyle="bold"
    android:layout_gravity="center_horizontal"/>

<EditText
    android:id="@+id/newPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:hint="@string/new_pwd_hint"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:textColor="@color/textColorLogin"
    android:textColorHint="@color/hintColor"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="20dp" />

<EditText
    android:id="@+id/rePassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:hint="@string/re_pwd_hint"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:textColor="@color/textColorLogin"
    android:textColorHint="@color/hintColor"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp" />

<Button
    android:id="@+id/btn_change_password"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="24dp"
    android:padding="12dp"
    android:text="@string/change_password"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@color/colorPrimary"
    android:textColor="@color/textColorLogin" />


</LinearLayout>
